# HelFEM

./: .clang-format  .gitignore  CITATIONS  CITATIONS.md  CLAUDE.md  CMake.dx7-lehtola  CMake.hugo  CMake.macOS_with_Homebrew  CMake.system  CMakeLists.txt  LICENSE  LibXcConfig.cmake  NOTICE  README.md  compile-JM.sh  compile.sh
atomic/: basis.cpp  basis.h  dftgrid.cpp  dftgrid.h  inttest.cpp  main.cpp  qtest.cpp  quadrature.cpp  quadrature.h
cmake/: helfemConfig.cmake.in
diatomic/: basis.cpp  basis.h  corebasis.cpp  dftgrid.cpp  dftgrid.h  inttest.cpp  main.cpp  quadrature.cpp  quadrature.h
docs/: autoconv_prototype.cpp  library-refactor.md
examples/: DESIGN_NOTE.md  atomic_radial_export.cpp
general/: angular.h  chebyshev.cpp  chebyshev.h  dftfuncs.cpp  diis.cpp  diis.h  elements.cpp  elements.h  gaunt.cpp  gaunt.h  gaunt_test.cpp  lbfgs.h  lcao.cpp  legendretable.cpp  lobatto.cpp  lobatto.h  polynomial.cpp  polynomial.h  polynomial_basis.cpp  polynomial_basis.h  scf_helpers.cpp  scf_helpers.h  spherical_harmonics.cpp  sphtest.cpp  timer.h  utils.cpp  utils.h
harmonic/: main.cpp  quadrature.h
legendre/: Associated_Legendre_Functions.f90  Auxilliary_Subroutines.f90  Data_Module.f90  Legendre_Function_Driver.f90  Legendre_Wrapper.f90  Legendre_Wrapper.h  Prolate_Functions.f90  Prolate_Spheroidal_Coulomb.f90  accuracy.f90  input_output.f90  itoc.f90  legendre.cpp  legendre.h  legendre_p_normal.cpp  legendre_p_prolate.cpp  legendre_pq.cpp  legendre_pq.h  legendre_q_normal.cpp  legendre_q_prolate.cpp  legendre_test.cpp
lib1dfem/: CMakeLists.txt
lib1dfem/include/lib1dfem/: HIP2Basis.h  HIP2Basis_eval.h  HIP2Basis_over_r.h  HIP3Basis.h  HIP3Basis_eval.h  HIP3Basis_over_r.h  HIPBasis.h  HIPBasis_eval.h  HIPBasis_over_r.h  LIPBasis.h  LIPBasis_eval.h  LegendreBasis.h  PolynomialBasis.h  chebyshev.h  grid.h  legendre_poly.h  lib1dfem.h  lobatto.h  math.h  types.h
libhelfem/: CMakeLists.txt
libhelfem/include/: ArmaEigen.h  CoulombExchangeFE.h  FiniteElementBasis.h  GTO.h  GTORadialBasis.h  GaussianNucleus.h  HIP2Basis.h  HIP2Basis_eval.h  HIP2Basis_over_r.h  HIP3Basis.h  HIP3Basis_eval.h  HIP3Basis_over_r.h  HIPBasis.h  HIPBasis_eval.h  HIPBasis_over_r.h  HollowNucleus.h  LIPBasis.h  LIPBasis_eval.h  LegendreBasis.h  Matrix.h  ModelPotential.h  NAORadialBasis.h  PointNucleus.h  PolynomialBasis.h  PolynomialBasisT.h  RadialBasis.h  RegularizedNucleus.h  STO.h  STORadialBasis.h  SphericalNucleus.h  chebyshev.h  grid.h  helfem.source.h  helfem.source.hh  legendre_poly.h  lobatto.h  math.h  types.h
libhelfem/src/: FiniteElementBasis.cpp  GaussianNucleus.cpp  GeneralHIPBasis.cpp  GeneralHIPBasis.h  HIPBasis.cpp  HIPBasis.h  HIPBasis_eval.cpp  HermiteBasis.h  HollowNucleus.cpp  LIPBasis.cpp  LIPBasis.h  LIPBasis_eval.cpp  LegendreBasis.cpp  LegendreBasis.h  ModelPotential.cc  ModelPotential.cpp  PointNucleus.cpp  PolynomialBasis.cpp  RadialBasis.cc  RadialBasis.cpp  RadialBasis.h  RadialPotential.cpp  RadialPotential.h  RegularizedNucleus.cpp  SphericalNucleus.cpp  chebyshev.cpp  chebyshev.h  erfc_expn.cc  erfc_expn.cpp  erfc_expn.h  generate_hip2_code.py  generate_hip3_code.py  generate_hip_code.py  generate_hip_family_code.py  generate_lip_code.py  grid.cc  grid.cpp  helfem.cc  helfem.cpp  lobatto.cpp  (+11 more)
libhelfemqc/: CMakeLists.txt
libhelfemqc/include/: CoulombExchangeFE.h  GTO.h  HollowNucleus.h  RegularizedNucleus.h  STO.h
libhelfemqc/src/: RegularizedNucleus.cpp
python/: CMakeLists.txt  bindings.cpp  test_install_full_eri.py  test_pyscf_be_mchf.py  test_pyscf_he.py  test_pyscf_he_cas.py  test_pyscf_he_casscf.py  test_pyscf_he_method_ladder.py  test_pyscf_he_nao.py  test_pyscf_he_no_iter.py  test_pyscf_he_states.py  test_radial_df_exhaustive.py  test_radial_df_factors.py  test_smoke.py
python/helfem/: __init__.py  pyscf_driver.py
src/: CMakeLists.txt
src/atomic/: RadialBasis.cpp  RadialBasis.h  TwoDBasis.cpp  TwoDBasis.h  basis.cpp  basis.h  dftgrid.cpp  dftgrid.h  erfc_expn.cpp  erfc_expn.h  gszopt.cpp  inttest.cpp  main.cpp  ooo.cpp  precision.cpp  quadrature.cpp  quadrature.h  teirank.cpp
src/diatomic/: 1e.cpp  basis.cpp  basis.h  completeness.cpp  corebasis.cpp  density_grid.cpp  density_line.cpp  dftgrid.cpp  dftgrid.h  dftgrid_purem.cpp  dftgrid_purem.h  inttest.cpp  main.cpp  ooo.cpp  purem_test.cpp  qtest.cpp  quadrature.cpp  quadrature.h  teirank.cpp  twodquadrature.cpp  twodquadrature.h
src/general/: GaussianNucleus.cpp  GaussianNucleus.h  HollowNucleus.cpp  HollowNucleus.h  ModelPotential.h  PointNucleus.cpp  PointNucleus.h  RadialPotential.h  SphericalNucleus.cpp  SphericalNucleus.h  angular.cpp  angular.h  angular_index_helpers.h  chebyshev.cpp  chebyshev.h  checkpoint.cpp  checkpoint.h  checkpoint_precision_test.cpp  constants.h  dftfuncs.cpp  dftfuncs.h  dftgrid_common.cpp  dftgrid_common.h  diis.cpp  diis.h  eigen_foundation_test.cpp  eigen_io.cpp  eigen_io.h  elements.cpp  elements.h  gaunt.cpp  gaunt.h  gaunt_test.cpp  gsz.cpp  gsz.h  lbfgs.cpp  lbfgs.h  lcao.cpp  lcao.h  legendretable.cpp  (+25 more)
src/harmonic/: main.cpp  precision.cpp  quadrature.cpp  quadrature.h  softcoulomb.cpp
src/legendre/: Ass_Leg_Poly.f90  Legendre.cpp  Legendre.h  Legendre_float128.h  Lentz_Thompson.f90  Matrix_Print.f90  Special_Functions.f90  legendre_reference_data.h  legendre_test.cpp  legendre_unit_test.cpp
src/sadatom/: 1e.cpp  basis.cpp  basis.h  configurations.cpp  configurations.h  dftgrid.cpp  dftgrid.h  main.cpp  ooo.cpp  printconf.cpp  scf.cpp  scf.h  solver.cpp  solver.h
